--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,20 @@
 FROM node:20-slim
 
-RUN apt-get update
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends curl tini && \
+    rm -rf /var/lib/apt/lists/*
 
 WORKDIR /usr/local/app
 
 COPY package*.json ./
 
 RUN npm ci && \
- npm cache clean --force && \
- mv /usr/local/app/node_modules /node_modules
+    npm cache clean --force && \
+    mv /usr/local/app/node_modules /node_modules
 
 COPY . .
 
 EXPOSE 8080
 
+ENTRYPOINT ["/usr/bin/tini", "--"]
 CMD ["node", "server.js"]
