--- a/.github/workflows/push-request.yaml
+++ b/.github/workflows/push-request.yaml
@@ -25,7 +25,7 @@ jobs:
     # Setup multiple node versions to test
     strategy:
       matrix:
-        node: [14, 16, 18, 20]
+        node: [20]
 
     steps:
       - uses: actions/checkout@v5
