--- a/.github/workflows/push-request.yaml
+++ b/.github/workflows/push-request.yaml
@@ -126,6 +126,8 @@ jobs:
 
     steps:
 
+      - uses: actions/checkout@v5
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
