--- a/.github/workflows/push-request.yaml
+++ b/.github/workflows/push-request.yaml
@@ -138,16 +138,14 @@ jobs:
       - name: Update kube config
         run: aws eks update-kubeconfig --name ${{ needs.TerraformBuild.outputs.cluster_name }} --region ${{ vars.region }}
 
-
       - name: Inject Image Registery Secret
         run: |
           kubectl create secret docker-registry ecr-secret \
-            --docker-server=${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ vars.region }}.amazonaws.com \
+            --docker-server=***.dkr.ecr.eu-north-1.amazonaws.com \
             --docker-username=AWS \
-            --docker-password=$(aws ecr get-login-password --region ${{ vars.region }}) \
-            --dry-run=client -o yaml | kubectl apply -f -
+            --docker-password=$(aws ecr get-login-password --region eu-north-1) \
+            --dry-run=client -o yaml | kubectl apply -f - --validate=false
 
-      
       - name: Deploy to eks
         env:
           ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
