--- a/.github/workflows/push-request.yaml
+++ b/.github/workflows/push-request.yaml
@@ -115,7 +115,7 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-  BuildCluster:
+  InjectImage:
 
     runs-on: ubuntu-latest
     needs: [ TerraformBuild, ImageBuildAndPublish ]
@@ -134,6 +134,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.region }}
+          aws-account-id: ${{ secrets.ACCOUNT_ID }}
 
       - name: Update kube config
         run: aws eks update-kubeconfig --name ${{ needs.TerraformBuild.outputs.cluster_name }} --region ${{ vars.region }}
@@ -141,9 +142,9 @@ jobs:
       - name: Inject Image Registery Secret
         run: |
           kubectl create secret docker-registry ecr-secret \
-            --docker-server=***.dkr.ecr.eu-north-1.amazonaws.com \
+            --docker-server=${{ secrets.ACCOUNT_ID }}.dkr.ecr.${{ vars.region }}.amazonaws.com \
             --docker-username=AWS \
-            --docker-password=$(aws ecr get-login-password --region eu-north-1) \
+            --docker-password=$(aws ecr get-login-password --region ${{ vars.region }}) \
             --dry-run=client -o yaml | kubectl apply -f - --validate=false
 
       - name: Deploy to eks
