--- a/k8s/k8s-deployment.yaml
+++ b/k8s/k8s-deployment.yaml
@@ -1,8 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata: 
-  name: node-app  
-  # namespace: default
+  name: node-app
   labels:
     app: node
 spec:
@@ -29,3 +28,15 @@ spec:
             requests:
               cpu: "150m"
               memory: "256Mi"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 15
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
