--- a/k8s/k8s-deployment.yaml
+++ b/k8s/k8s-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         - name: ecr-secret
       containers:
         - name: node-app
-          image: "$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/node-app:latest"
+          image: $ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/node-app:latest
           ports:
             - containerPort: 8080
           resources:
